# send_email_python

./: .env_example  pyproject.toml
src/: main.py
src/template/: mail_01.html
